Fixed class GenericInterfceSpacing.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.GenericInterface.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.GenericInterface.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.14 $
+ * @version     $Revision: 1.15 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -65,7 +65,6 @@ span.WarningDialog {
 
 .GenericInterfaceSpacing {
     margin-left: 13px;
-    margin-right: 13px;
 }
 
 /**
